package mcp.vehicletypes;

public class Coaches extends Vehicle {
    public Coaches(String license_no, boolean disable){
        super("Coaches", license_no, disable);

    }

}
