package mcp.vehicletypes;

public class Higher extends Vehicle {
    public Higher(String license_no, boolean disable){
        super("Higher", license_no, disable);

    }

}
