package mcp.vehicletypes;

public class Longer extends Vehicle {
    public Longer(String license_no, boolean disable){
        super("Longer", license_no, disable);

    }

}
