package mcp.vehicletypes;

public class Motorbikes extends Vehicle {
    public Motorbikes(String license_no, boolean disable){
        super("Motorbikes", license_no, disable);

    }

}