package mcp.vehicletypes;

public class Standard extends Vehicle {
    public Standard(String license_no, boolean disable){
        super("Standard", license_no, disable);

    }

}
