@startuml

title __VEHICLETYPES's Class Diagram__\n

  package mcp {
    package mcp.vehicletypes {
      class Coaches {
          + Coaches()
      }
    }
  }
  

  package mcp {
    package mcp.vehicletypes {
      class Higher {
          + Higher()
      }
    }
  }
  

  package mcp {
    package mcp.vehicletypes {
      class Longer {
          + Longer()
      }
    }
  }
  

  package mcp {
    package mcp.vehicletypes {
      class Motorbikes {
          + Motorbikes()
      }
    }
  }
  

  package mcp {
    package mcp.vehicletypes {
      class Standard {
          + Standard()
      }
    }
  }
  

  package mcp {
    package mcp.vehicletypes {
      class Vehicle {
          - vehicletype : String
          - license_no : String
          - driverdisable : boolean
          + isDriverdisable()
          + setDriverdisable()
          + getVehicletype()
          + setVehicletype()
          + getLicense_no()
          + setLicense_no()
          + Vehicle()
          + Vehicle()
      }
    }
  }
  

  Coaches -up-|> Vehicle
  Higher -up-|> Vehicle
  Longer -up-|> Vehicle
  Motorbikes -up-|> Vehicle
  Standard -up-|> Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
